objects/Contact.object
<CustomObject>
    <fields>
        <fullName>DLImageContentId__c</fullName>
        <label>DLImageContentId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DLImage__c</fullName>
        <formula>IF(ISBLANK( DLImageContentId__c ), &quot;&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/&quot; &amp;  DLImageContentId__c ,&quot;&quot;, 200, 330))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DL Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganDonor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Organ Donor</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>